--- a/Projet_MODE.ipynb
+++ b/Projet_MODE.ipynb
@@ -45,9 +45,19 @@
         }
       ],
       "source": [
-        "print(\"Hello World\")\n",
-        "print(\"Jean\")"
+        "print(\"Hello World\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Je teste pour enregistrer\")"
+      ],
+      "metadata": {
+        "id": "O0Ot3cEU5wD8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
