--- a/Projet_MODE.ipynb
+++ b/Projet_MODE.ipynb
@@ -45,19 +45,9 @@
         }
       ],
       "source": [
-        "print(\"Hello World\")"
+        "print(\"Hello World\")\n",
+        "print(\"Jean\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Je teste pour enregistrer\")"
-      ],
-      "metadata": {
-        "id": "O0Ot3cEU5wD8"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
