--- a/Projet_MODE.ipynb
+++ b/Projet_MODE.ipynb
@@ -48,6 +48,17 @@
         "print(\"Hello World\")\n",
         "print(\"Jean\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"je teste une énième fois\")"
+      ],
+      "metadata": {
+        "id": "dUfJ1XiQ6O8M"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
